--- a/index.html
+++ b/index.html
@@ -2,10 +2,71 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpg" href="/brainseek.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>BrainSeek — Intelligent Knowledge Search</title>
+
+    <!-- ===== Primary SEO ===== -->
+    <meta
+      name="description"
+      content="BrainSeek — fast, intelligent knowledge search powered by AI. Discover information quickly with semantic search and real-time insights."
+    />
+    <meta
+      name="keywords"
+      content="BrainSeek, AI search, semantic search, knowledge engine, research tools, intelligent discovery"
+    />
+    <link rel="canonical" href="https://YOUR_DOMAIN_HERE/" />
+
+    <!-- Apple / Mobile Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/brainseek.jpg" />
+
+    <!-- Theme Colors -->
+    <meta name="theme-color" content="#0b5cff" />
+    <meta name="msapplication-TileColor" content="#0b5cff" />
+
+    <!-- ===== Open Graph (Facebook, LinkedIn, WhatsApp, etc.) ===== -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="BrainSeek" />
+    <meta property="og:title" content="BrainSeek — Intelligent Knowledge Search" />
+    <meta
+      property="og:description"
+      content="Find and understand information faster with BrainSeek's semantic search and AI-powered insights."
+    />
+    <meta property="og:url" content="https://YOUR_DOMAIN_HERE/" />
+
+    <!-- *** IMPORTANT: use an absolute URL for social preview image *** -->
+    <meta
+      property="og:image"
+      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+    />
+    <meta property="og:image:alt" content="BrainSeek logo" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- ===== Twitter Card ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BrainSeek — Intelligent Knowledge Search" />
+    <meta
+      name="twitter:description"
+      content="Discover information instantly with BrainSeek's AI-enhanced semantic search."
+    />
+    <meta
+      name="twitter:image"
+      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+    />
+    <meta name="twitter:image:alt" content="BrainSeek logo" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
