corrected meta data

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       name="keywords"
       content="BrainSeek, AI search, semantic search, knowledge engine, research tools, intelligent discovery"
     />
-    <link rel="canonical" href="https://YOUR_DOMAIN_HERE/" />
+    <link rel="canonical" href="https://brainseek.vercel.app/" />
 
     <!-- Apple / Mobile Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/brainseek.jpg" />
@@ -30,21 +30,21 @@
     <!-- ===== Open Graph (Facebook, LinkedIn, WhatsApp, etc.) ===== -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="BrainSeek" />
-    <meta property="og:title" content="BrainSeek — Intelligent Knowledge Search" />
+    <meta property="og:title" content="BrainSeek" />
     <meta
       property="og:description"
-      content="Find and understand information faster with BrainSeek's semantic search and AI-powered insights."
+      content="BrainSeek — fast, intelligent knowledge search powered by AI. Discover information quickly with semantic search and real-time insights."
     />
-    <meta property="og:url" content="https://YOUR_DOMAIN_HERE/" />
+    <meta property="og:url" content="https://brainseek.vercel.app/" />
 
     <!-- *** IMPORTANT: use an absolute URL for social preview image *** -->
     <meta
       property="og:image"
-      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+      content="https://brainseek.vercel.app/brainseek.jpg"
     />
     <meta
       property="og:image:secure_url"
-      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+      content="https://brainseek.vercel.app/brainseek.jpg"
     />
     <meta property="og:image:alt" content="BrainSeek logo" />
     <meta property="og:image:width" content="1200" />
@@ -59,7 +59,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://YOUR_DOMAIN_HERE/brainseek.jpg"
+      content="https://brainseek.vercel.app/brainseek.jpg"
     />
     <meta name="twitter:image:alt" content="BrainSeek logo" />
 
